--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
 
     // Coil library
     implementation 'io.coil-kt:coil-compose:1.3.2'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0-beta01"
 }
