--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.CameraApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
